fixing CSRF filter issue (still not works);